# plasma-workspace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  plasma-workspace.pro
dataengines/: CMakeLists.txt
dataengines/geolocation/: geolocation.cpp  geolocation.h
dataengines/powermanagement/: powermanagementengine.cpp  powermanagementengine.h  powermanagementjob.cpp  powermanagementjob.h  powermanagementservice.operations
dataengines/statuspanel/: CMakeLists.txt  plasma-dataengine-statuspanel.desktop  statuspanel.cpp  statuspanel.h
dataengines/weather/: CMakeLists.txt  weatherengine.cpp  weatherengine.h
debian/: changelog  control  copyright  libnotificationmanager1.install  libnotificationmanager1.maintscript  libplasma-geolocation-interface5.install  libtaskmanager6.install  plasma-workspace-dev.acc.in  plasma-workspace-dev.install  plasma-workspace-wayland.install  plasma-workspace.install  plasma-workspace.lintian-overrides  plasma-workspace.maintscript  plasma-workspace.postinst  plasma-workspace.qml-ignore  rules  sddm-theme-breeze.install  watch
debian/meta/: cmake-ignore
debian/source/: lintian-overrides
kcms/: CMakeLists.txt
kcms/translations/: CMakeLists.txt  regionmanager.cpp  regionmanager.h  resources.qrc  translatetool.cpp  translatetool.h  translations.cpp  translations.h
kcms/translations/package/contents/ui/: RegionSelectView.qml  main.qml
krunner/: view.cpp  view.h
ksmserver/: logout.cpp  org.kde.LogoutPrompt.xml  server.cpp
libkworkspace/: sessionmanagement.cpp
libnotificationmanager/: abstractnotificationsmodel.cpp  abstractnotificationsmodel.h  abstractnotificationsmodel_p.h  notifications.h  watchednotificationsmodel.cpp  watchednotificationsmodel.h
libtaskmanager/: activityinfo.cpp  activityinfo.h  taskgroupingproxymodel.cpp  tasksmodel.cpp  waylandtasksmodel.cpp
logout-greeter/: greeter.cpp  greeter.h  shutdowndlg.cpp
plasma-windowed/: plasma-windowed.desktop
po/af/: krdb.po  (+8 more)
runners/: CMakeLists.txt
sddm-theme/: Main.qml
shell/: CMakeLists.txt  main.cpp  messagebox.cpp  messagebox.h  org.kde.plasmashell.desktop.cmake  osd.cpp  panelview.cpp  shellcorona.cpp  shellcorona.h  toast.cpp  toast.h
startkde/: startplasma-wayland.cpp  startplasma.cpp
(+4729 files in other folders)
